phpmd-0.2.1 (2010/01/04)
========================

- Implemented #5: Allow multiple input files/directories. Implemented in svn
  revision #158.

phpmd-0.2.0 (2009/12/30)
========================

- Implemented #2: Support for unused code fules completed, implemented in svn
  revision #134.
- Implemented #3: Text renderer implemented.
- Implemented #4: Implement a html renderer, implemented in svn revision #139.
- Several performance improvements.


phpmd-0.1.0 (2009/12/20)
========================

- Initial release