@@ -1,6 +1,6 @@
 project.dir=
 project.name=phpmd
-project.version=0.2.0
+project.version=0.2.1
 project.stability=alpha
 
 coding.standard=PEAR
