@@ -260,25 +260,16 @@ class PHP_PMD_RuleSet implements IteratorAggregate
      */
     public function apply(PHP_PMD_AbstractNode $node)
     {
-        foreach ($this->_rules as $interfaceName => $rules) {
-            if ($node instanceof $interfaceName) {
-                $this->_applyRules($node, $rules);
-            }
-        }
-    }
+        // Current node type
+        $className = get_class($node);
 
-    /**
-     * This method applies all rules in the <b>$rules</b> array to the given
-     * node instance.
-     *
-     * @param PHP_PMD_AbstractNode        $node  The context source node instance.
-     * @param array(PHP_PMD_AbstractRule) $rules List of rules to apply on that node.
-     *
-     * @return void
-     */
-    private function _applyRules(PHP_PMD_AbstractNode $node, array $rules)
-    {
-        foreach ($rules as $rule) {
+        // Check for valid node type
+        if (!isset($this->_rules[$className])) {
+            return;
+        }
+
+        // Apply all rules to this node
+        foreach ($this->_rules[$className] as $rule) {
             $rule->setReport($this->_report);
             $rule->apply($node);
         }
