@@ -69,7 +69,7 @@ class PHP_PMD_Rule_Design_LongClassTest extends PHP_PMD_AbstractTest
      * threshold.
      *
      * @return void
-     * @covers PHP_PMD_Rule_Design_LongClass
+     * @covers PHP_PMD_Rule_UnusedLocalVariable
      * @group phpmd
      * @group phpmd::rule
      * @group phpmd::rule::design
@@ -91,7 +91,7 @@ class PHP_PMD_Rule_Design_LongClassTest extends PHP_PMD_AbstractTest
      * threshold.
      *
      * @return void
-     * @covers PHP_PMD_Rule_Design_LongClass
+     * @covers PHP_PMD_Rule_UnusedLocalVariable
      * @group phpmd
      * @group phpmd::rule
      * @group phpmd::rule::design
@@ -113,7 +113,7 @@ class PHP_PMD_Rule_Design_LongClassTest extends PHP_PMD_AbstractTest
      * than the threshold.
      *
      * @return void
-     * @covers PHP_PMD_Rule_Design_LongClass
+     * @covers PHP_PMD_Rule_UnusedLocalVariable
      * @group phpmd
      * @group phpmd::rule
      * @group phpmd::rule::design
